# obstacle_crossing

./: .gitattributes  .gitignore  PACKAGE_OVERVIEW.md  README.md
scripts/: generate_obstacle_crossing_metadata.py  make_stay_still_npz.py  print_obstacle_crossing_layout.py  print_obstacle_crossing_registry.py  visualize_terrain.py
source/obstacle_crossing/: pyproject.toml  setup.py
source/obstacle_crossing/obstacle_crossing/: __init__.py  register_envs.py
source/obstacle_crossing/obstacle_crossing/config/: __init__.py  obstacle_crossing_env_cfg.py
source/obstacle_crossing/obstacle_crossing/config/g1/: __init__.py  g1_obstacle_crossing_cfg.py
source/obstacle_crossing/obstacle_crossing/config/g1/agents/: __init__.py  instinct_rl_cfg.py
source/obstacle_crossing/obstacle_crossing/mdp/: __init__.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py  utils.py
source/obstacle_crossing/obstacle_crossing/mdp/commands/: __init__.py  commands_cfg.py  terrain_aware_velocity_command.py
source/obstacle_crossing/obstacle_crossing/terrain/: __init__.py  terrain_assignment.py  terrain_layout.py  terrain_physics.py  terrain_registry.py  terrain_specs.py
terrains/: PROJECT_FRAMEWORK.md
terrains/.claude/: settings.local.json
terrains/centered/: 1.Continuous Ramp.stl  10.Width-restricted L-shaped Bend.stl  2.Continuous Hurdling.stl  3.Cross Slope.stl  4.Consecutive Slalom.stl  5.Symmetrical Ramp.stl  6.Spiral Staircase.stl  7.S-Curve.stl  8.One-meter Platform.stl  9.Crawl Channel.stl  metadata.yaml
terrains/combined/: longitudinal_6_terrains.stl  (+1 more)
(+1 files in other folders)
