[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obstacle-crossing"
version = "0.1.0"
description = "Standalone obstacle crossing task library built on Isaac Lab + InstinctLab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["obstacle_crossing*"]
